--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Run Pytest
         run: pytest
       - name: Run experiment
-        run: python exp.py
+        run: python exp.py [0.1, 0.2, 0.3, 0.45]
