--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Run Pytest
         run: pytest
       - name: Run experiment
-        run: python exp.py 1
+        run: python train_compare.py candidate_model.joblib
