--- a/.github/workflows/gitHub_action_q2.yml
+++ b/.github/workflows/gitHub_action_q2.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Run Pytest
         run: pytest
       - name: Run experiment
-        run: python exe.py 5
+        run: python train_compare2.py
