flask tool and added in action

--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -25,4 +25,5 @@ jobs:
       - name: Run experiment
         run: python train_compare2.py
       - name: Run experiment
+        run: cd AI
         run: flask run
