flask tool and added in action

--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -26,4 +26,4 @@ jobs:
         run: python train_compare2.py
       - name: Run experiment
         run: cd AI
-        run: flask run
+        run: flask
