--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -25,5 +25,6 @@ jobs:
       - name: Run experiment
         run: python train_compare2.py
       - name: Run experiment
-        run: cd AI
-        run: flask
+        run: cd /AI
+      - name: Run Flask application
+        run: flask run
