flask tool added in action_corrected2

--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Run experiment
         run: python train_compare2.py
       - name: Run experiment
-        run: cd /AI
+        run: cd ./AI
       - name: Run Flask application
         run: flask run
