--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -23,12 +23,12 @@ jobs:
       - name: Run Pytest
         run: pytest
       - name: Run experiment
-        run: python train_compare2.py
-      - name: Run experiment
-        run: cd ./AI
-      - name: Set FLASK_APP
-        # run: export FLASK_APP=hello
-        run: export FLASK_APP=AI.hello:app
-      - name: Run Flask application
-        # run: flask run
-        run: flask run --app AI.hello:app
+      #   run: python train_compare2.py
+      # - name: Run experiment
+      #   run: cd ./AI
+      # - name: Set FLASK_APP
+      #   # run: export FLASK_APP=hello
+      #   run: export FLASK_APP=AI.hello:app
+      # - name: Run Flask application
+      #   # run: flask run
+      #   run: flask run --app AI.hello:app
