--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -29,6 +29,6 @@ jobs:
       # - name: Set FLASK_APP
       #   # run: export FLASK_APP=hello
       #   run: export FLASK_APP=AI.hello:app
-      - name: Run Flask application
-        run: flask run
+      # - name: Run Flask application
+      #   run: flask run
       #   run: flask run --app AI.hello:app
