--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -23,6 +23,6 @@ jobs:
       - name: Run Pytest
         run: pytest
       - name: Set FLASK_APP
-        run: export FLASK_APP=AI.hello:app
+        run: export FLASK_APP=hello:app
       - name: Run Flask application
-        run: flask run --app AI.hello:app
+        run: flask run --host=0.0.0.0
