--- a/Docker/dockerfile
+++ b/Docker/dockerfile
@@ -1,27 +1,63 @@
-# From  ubuntu:22.04
 FROM python:3.11
 
-COPY . /digits/
-# 
-# RUN apt-get update
-# RUN apt-get install -y python3
+# Copy the current directory contents into the container at /app
+COPY . /app/
 
-RUN pip3 install --no-cache-dir -r ./digits/requirements.txt
+# Install any needed packages specified in requirements.txt
+RUN pip3 install --no-cache-dir -r ./app/requirements.txt
 
-# WORKDIR /digits
-# cmd ["echo", "Run the flask in Docker"]
-# CMD ["pytest"]
+# Set the working directory to /app
+WORKDIR /app
 
-WORKDIR /digits/API
-# Export the FLASK_APP environment variable # export FLASK_APP=hello:app
-RUN export FLASK_APP=hello:app
-ENV FLASK_APP=hello:app   
+# Load the MNIST dataset and train the model
+RUN python trainmodel.py
+
+# Set the working directory to /app/API
+WORKDIR /app/API
+
+ENV FLASK_APP=app
+# ENV FLASK_APP=app.py
+# ENV FLASK_APP=app.app    
 # Make port 5000 available to the world outside this container
 EXPOSE 5000
 
 CMD ["flask", "run", "--host=0.0.0.0"]
 
+# # Make port 80 available to the world outside this container
+# EXPOSE 80
 
+# # Define environment variable
+# ENV NAME World
+
+# # Run app.py when the container launches
+# CMD ["python", "app.py"]
+
+
+# #-----previous docker file---------
+# # From  ubuntu:22.04
+# FROM python:3.11
+
+# COPY . /digits/
+# # RUN apt-get update
+# # RUN apt-get install -y python3
+
+# RUN pip3 install --no-cache-dir -r ./digits/requirements.txt
+
+# # WORKDIR /digits
+# # cmd ["echo", "Run the flask in Docker"]
+# # CMD ["pytest"]
+
+# WORKDIR /digits/API
+# # Export the FLASK_APP environment variable # export FLASK_APP=hello
+# ENV FLASK_APP=hello:app
+# # ENV FLASK_APP=hello.py
+# # ENV FLASK_APP=hello    
+# # Make port 5000 available to the world outside this container
+# EXPOSE 5000
+
+# CMD ["flask", "run", "--host=0.0.0.0"]
+
+# #-----end---
 
 
 
@@ -39,7 +75,7 @@ CMD ["flask", "run", "--host=0.0.0.0"]
 # docker build -t digits_class:v1 -f Docker/dockerfile .
 # docker run -it -p 5000:5000 digits_class:v1 bash
 # # change the directory where flask code is present (cd API) 
-# export FLASK_APP=hello:app
+# export FLASK_APP=hello
 # flask run --host=0.0.0.0
 # # ---------
 
