--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -20,8 +20,6 @@ jobs:
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - name: Install dep
         run:  pip3 install --no-cache-dir -r requirements.txt
-      - name: Run Pytest
-        run: |
-          cd API
-          pytest -s testcase.py
+      - name: Run q2
+        run: python majorq21.py
    
