--- a/.github/workflows/github_action.yml
+++ b/.github/workflows/github_action.yml
@@ -20,7 +20,7 @@ jobs:
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - name: Install dep
         run:  pip3 install --no-cache-dir -r requirements.txt
-      - name: Run q2
-        run: python majorq21.py
+      - name: Run q3
+        run: pytest majorq3.py
 
    
